<resources>
    <string name="app_name">Bullet Cart</string>
    <string name="placeholder"> ------ --- </string>
    <string name="all_videos">All Videos</string>
    <string name="loading_video">Loading Video ..</string>
    <string name="watch_till_end">Watch till End to get Bullets !</string>
    <string name="no_videos_available_try_again">No videos available</string>
    <string name="no_stores_available_try_again">No stores available</string>
    <string name="video_awarded">Congrats! \nYour cart is loaded with %1$s bullets.</string>
    <string name="already_awarded">No Bullets, Sorry! \nYou got the bullets for this video already!</string>
    <string name="already_limited">Video limited to its bullets!</string>
    <string name="no_videos_available">No videos available, please try again after sometime.</string>
    <string name="unabe_to_load_offerwalls">Unable to Load Offerwalls \n please try again After SomeTime !!</string>
    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="instructions">Instructions</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="redeem">Redeem</string>
    <string name="legal_policy">Legal &amp; Policies</string>
    <string name="about">About Us</string>
    <string name="help">Help</string>
    <string name="pos">POS</string>
    <string name="transactions">Transactions</string>
    <string name="fired_bullets">Fired Bullets</string>
    <string name="share">Share This App</string>
    <string name="rate_this_app">Rate The App</string>
    <string name="policy">Privacy Policy</string>
    <string name="contact">Contact Us</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">Loading ..</string>
    <string name="no_transactions">No Transactions Found !</string>
    <string name="congratulations">Congratulations !!</string>
    <string name="successfull_received">Successfully Received</string>
    <string name="invitation_bonus_received">Invitation Bonus Received</string>
    <string name="refer_bonus_received">Referral Bonus Received</string>
    <string name="adnetwork_disabled">AdNetwork Disabled</string>
    <string name="adnetwork_disabled_mesage">We have temporarly disabled this AdNetwork, please try again after some time</string>
    <string name="success">Successful</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Processing</string>
    <string name="redeem_success_title"> Redeem Successful !</string>
    <string name="redeem_recevied">Redeem request received for</string>
    <string name="redeem_succes_message"> you can check Redeem Status in Transactions Tab</string>
    <string name="error">Error..</string>
    <string name="enter_something">Please Enter Something</string>
    <string name="app_currency">Bullets</string>
    <string name="updating_balance">Updating Bullets</string>
    <string name="update_balance">update Balance</string>
    <string name="share_text">Hello, look what a beautiful app that I found here:</string>
    <string name="invite">Invite Friends</string>
    <string name="get_bonus">Get Bonus</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="refer_code">Your Referral Code is</string>
    <string name="placeholder_referer"> Enter INVITATION Code</string>
    <string name="referDescription">You and Your Friend both Get</string>
    <string name="refer_code_copied">Refer Code Copied to Clipboard</string>
    <string name="refer_text">by using my Refer Code : </string>
    <string name="self_refer">You Cannot Refer YourSelf</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="enter_valid_code">Please Enter Valid Code</string>
    <string name="choose_one">Choose one</string>
    <string name="facebook_app_id">1725210487578778</string>
    <string name="fb_login_protocol_scheme">fb1725210487578778</string>
    <string name="admob_appId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_videos">ca-app-pub-3940256099942544/5224354917</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_delay">5000</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="oops">Oops ..</string>
    <string name="no_enough">No Enough</string>
    <string name="to">to</string>
    <string name="get">Get</string>
    <string name="bonus_taken">Bonus Taken Already ..</string>
    <string name="daily_reward_taken">Daily Reward Taken Already \n\n Try again after ..</string>
    <string name="title_server_problem">Server not Responding !</string>
    <string name="msg_server_problem">Looks like our Server not Responding, please try again after some time</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="settings_file">account</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_account_username">account_username</string>
    <string name="settings_account_access_token">access_token</string>
    <string name="processing">Processing ..</string>
    <string name="please_wait">Please wait ..</string>
    <string name="update">Update</string>
    <string name="update_app">Update App to Earn More</string>
    <string name="update_app_description">Many more Earning Features Added.</string>
    <string name="retry">Retry</string>
    <string name="title_network_error">Network Not Detected !</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="action_login">Sign in</string>
    <string name="action_signup">Sign up</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="action_continue">Continue</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_email">Email</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">Email is already registered</string>
    <string name="please_login">please login ..</string>
    <string name="success_logout">Sign out success</string>
    <string name="error_email">Email invalid ..</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="unknown_error">Something went wrong. \n Please try again After SomeTime !!</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 5 characters</string>
    <string name="error_device_exists">Device Registered Already !</string>
    <string name="error_device_exists_description">We allow one Account for one device, please login to your existing account ..</string>
    <string name="slide_1_title">Earn Cupons !</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_3_title">Hello Food!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_1_desc">Earn Cupons on every single service we offer!</string>
    <string name="slide_2_desc">Earn movie tickets for your family and friends!</string>
    <string name="slide_3_desc">The easiest way to Get food Discounts from your favourite restaurant!</string>
    <string name="slide_4_desc">Get Discount on tickets of any transportation and travel the world!</string>
    <string name="instructions_content" translatable="false">
        <![CDATA[
        <b>For Videos: </b><br/>
        1. Select a video to watch from the list.<br/>
        2. Click on the video to watch it. <br/>
        3. Watch until the end of the Video to get Rewarded.<br/>
        4. Go back to the App Main Screen and tap "Refresh" if you have not been Rewarded yet.<br/>
        5. If you still haven\'t\ been awarded, you will get your Reward within 1-5 minutes.<br/><br/>

        This App <b>Source Code</b> is Selling on <b>CODYHUB</b> you can Buy it from : www.codyhub.com/item/video-rewards-android-app/<br/><br/>

        &copy; 2019 <b> VideoRewards </b> by <b>DroidOXY</b> ]]>
    </string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="custom_layout">Custom Layout</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="encode_text">Encode Text</string>
    <string name="title_activity_single_detail">SingleDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reach_us">ReachUs</string>
    <string name="exit_app">Press once again to exit!</string>
    <string name="waiting_msg">Please wait…</string>
    <string name="no_product">There is no product</string>
    <string name="comma">.</string>
    <string name="transfer">Transfer</string>
    <string name="card_pay">CARD</string>
    <string name="cash_pay">CASH</string>
    <string name="check_payment">Check your payment</string>
    <string name="total_price">$%1$s </string>
    <string name="total_check_price">Sub total: %1$s%2$s </string>
    <string name="quantity">Quantity: %1$d</string>
    <string name="dpp_inc_tax">Price Exc.tax : %1$s %2$s</string>
    <string name="btn_confirm">Confirm</string>
    <string name="delivery_complete_sucess">Your order has been delivered to you.</string>
    <string name="thank_use">Thank you for using Bullet Cart</string>
    <string name="promo_detail">Promo Redeemed - </string>
    <string name="invoice_no">Invoice No. %1$s</string>
    <string name="invoice_date">Date: %1$s</string>
    <string name="product">Product</string>
    <string name="invoice_quantity">Quantity</string>
    <string name="invoice_unit_price">Unit Price</string>
    <string name="invoice_cash">Cash</string>
    <string name="invoice_bdate">Date</string>
    <string name="invoice_delivery_price">Delivery</string>
    <string name="invoice_delivery_price_tax">Delivery Tax</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_points">Bullets</string>
    <string name="dialog_method_title">Select what do you want</string>
    <string name="dialog_method_delivery">Delivery</string>
    <string name="dialog_method_direct">Self-Checkout</string>
    <string name="dialog_order_title"> Enter your Details</string>
    <string name="dialog_order_user_name">Name</string>
    <string name="dialog_order_user_email">Email</string>
    <string name="dialog_order_user_phone">Phone Number</string>
    <string name="dialog_order_area">Select Area :</string>
    <string name="dialog_order_area_address">Order Area Address</string>
</resources>