<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20px"
    android:orientation="vertical"
    android:background="@color/black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_order_title"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:id="@+id/txt_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:hint="@string/dialog_order_user_name"
        android:id="@+id/txt_user_name"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/bg_color"
        android:textSize="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:hint="@string/dialog_order_user_phone"
        android:id="@+id/txt_user_phone"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:textColorHint="@color/bg_color"
        android:textSize="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:hint="@string/dialog_order_user_email"
        android:id="@+id/txt_user_email"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/bg_color"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/dialog_order_area"
        android:textSize="13dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:id="@+id/spinner_area"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:hint="@string/dialog_order_area_address"
        android:id="@+id/txt_area_address"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/bg_color"
        android:textSize="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_btn"
        android:padding="5dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btn_ok"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:background="@drawable/button_login"
            android:layout_marginRight="3dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:background="@drawable/button_login"
            android:layout_marginLeft="3dp"/>

    </LinearLayout>
</LinearLayout>