<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20px"
    android:orientation="vertical"
    android:background="@color/black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_method_title"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radio_method">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="17dp"
            android:text="@string/dialog_method_direct"
            android:id="@+id/radio_sell"
            android:textColor="@color/white"
            android:checked="true"
            android:buttonTint="@color/white"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="17dp"
            android:text="@string/dialog_method_delivery"
            android:id="@+id/radio_delivery"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ok"
        android:id="@+id/btn_ok"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:background="@drawable/button_login"
        android:textStyle="bold"/>
</LinearLayout>