<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BillActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/invoice_header_header_height"
                android:gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/invoice_no"
                        style="@style/invoice_header_title"
                        android:text="@string/invoice_no"/>
                    <!--<TextView-->
                    <!--android:id="@+id/uid"-->
                    <!--style="@style/invoice_header_title"-->
                    <!--android:text="@string/uid" />-->
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/invoice_date"
                        style="@style/invoice_header_title"
                        android:text="@string/invoice_date"/>
                </LinearLayout>
            </LinearLayout>


            <ListView
                android:id="@+id/invoice_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@color/transparent"
                android:dividerHeight="0dp">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/delivery_price_layout"
                        android:paddingLeft="20dp">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/invoice_delivery_price"/>
                        <TextView
                            android:id="@+id/txt_delvery_price"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/delivery_price_tax_layout"
                        android:paddingLeft="20dp">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/invoice_delivery_price_tax"/>
                        <TextView
                            android:id="@+id/txt_delvery_price_tax"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$100"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/invoice_cash"/>
                        <TextView
                            android:id="@+id/cash_price"
                            android:text="$101.5"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/invoice_bdate"/>
                        <TextView
                            android:id="@+id/date"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="09/30/2018"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/total_points"/>
                        <TextView
                            android:id="@+id/total_points"
                            android:text="100"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/invoice_footer_title"
                            android:text="@string/total_paid"/>
                        <TextView
                            android:id="@+id/total_paid"
                            android:text="$101.5"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>