<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/invoice_text_title"
                        android:text="@string/product"/>
                    <TextView
                        android:id="@+id/invoice_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:text="aa"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_promo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_detail"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/invoice_text_title"
                        android:text="@string/invoice_quantity"/>
                    <TextView
                        android:id="@+id/invoice_product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/invoice_text_title"
                        android:text="@string/invoice_unit_price"/>
                    <TextView
                        android:id="@+id/invoice_product_uprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/dark_round_background">

                <!--<TextView-->
                    <!--style="@style/invoice_text_title"-->
                    <!--android:text="@string/invoice_subtotal"/>-->
                <TextView
                    android:id="@+id/invoice_product_subtotal"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pp_exc_tax"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/invoice_font"
                android:text="2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pp_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/invoice_font"
                android:text="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pp_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="@dimen/invoice_font"
                android:text="2"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>